[package]
name = "rwlinux"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
crossterm = "0.25.0"
tui = "0.19.0"
memmap = "0.7.0"
hex = "0.4.3"
unicode-width = "0.1.9"
libc = "0.2.132"
actix-web = "4"
serde = { version="1.0.144", features=["derive"] }
serde_json = "1.0.85"
env_logger = "0.9.0"
actix-cors = "0.6.1"
pciid-parser = "0.6.0"
log = "0.4.17"
log4rs = "1.1.1"